media/src/css/subtitle-editor/subtitle-editor.scss
@charset "UTF-8";

// Fonts
$Helvetica: 'Helvetica Neue', Helvetica, Arial, 'Liberation Sans', FreeSans, sans-serif;
$OpenSans: 'Open Sans', $Helvetica;
$CodePro: 'CodeProLC', $OpenSans;

// Custom fonts
@font-face {
    font-family: 'CodeProLC';
    src: url('../../../fonts/CodeProLC.eot');
    src: url('../../../fonts/CodeProLC.eot?#iefix') format('embedded-opentype'),
         url('../../../fonts/CodeProLC.woff') format('woff'),
         url('../../../fonts/CodeProLC.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

// Mixins
@mixin border-radius($radius: 5px) {
    -webkit-background-clip: padding-box;
    -webkit-border-radius: $radius;
    -moz-background-clip: padding-box;
    -moz-border-radius: $radius;
    border-radius: $radius;
    background-clip: padding-box;
}
@mixin box-shadow($horizontal: 0px, $vertical: 1px, $blur: 2px, $color: #CCC) {
  -webkit-box-shadow: $horizontal $vertical $blur $color;
  -moz-box-shadow: $horizontal $vertical $blur $color;
  box-shadow: $horizontal $vertical $blur $color;
}
@mixin inset-box-shadow($horizontal: 0px, $vertical: 1px, $blur: 2px, $color: #CCC) {
  -webkit-box-shadow: inset $horizontal $vertical $blur $color;
  -moz-box-shadow: inset $horizontal $vertical $blur $color;
  box-shadow: inset $horizontal $vertical $blur $color;
}
@mixin multi-box-shadow($horizontalIn: 0px, $verticalIn: 1px, $blurIn: 2px, $colorIn: #CCC, $horizontal: 0px, $vertical: 1px, $blur: 2px, $color: #CCC) {
  -webkit-box-shadow: inset $horizontalIn $verticalIn $blurIn $colorIn, $horizontal $vertical $blur $color;
  -moz-box-shadow: inset $horizontalIn $verticalIn $blurIn $colorIn, $horizontal $vertical $blur $color;
  box-shadow: inset $horizontalIn $verticalIn $blurIn $colorIn, $horizontal $vertical $blur $color;
}
@mixin multi-border-radius($topLeft: 5px, $topRight: 5px, $bottomRight: 5px, $bottomLeft: 5px) {
    -webkit-border-top-left-radius: $topLeft;
    -webkit-border-top-right-radius: $topRight;
    -webkit-border-bottom-right-radius: $bottomRight;
    -webkit-border-bottom-left-radius: $bottomLeft;
    -moz-border-radius-topleft: $topLeft;
    -moz-border-radius-topright: $topRight;
    -moz-border-radius-bottomright: $bottomRight;
    -moz-border-radius-bottomleft: $bottomLeft;
    border-top-left-radius: $topLeft;
    border-top-right-radius: $topRight;
    border-bottom-right-radius: $bottomRight;
    border-bottom-left-radius: $bottomLeft;
}
@mixin vertical-gradient($start: #000, $stop: #FFF) { background: $start;
    background: -webkit-gradient(linear, left top, left bottom, from($start), to($stop));
    background: -moz-linear-gradient(center top, $start 0%, $stop 100%);
    background: -moz-gradient(center top, $start 0%, $stop 100%);
}
@mixin vertical-gradient-with-image($image, $start: #000, $stop: #FFF) {
    background: ($start + $stop) / 2 $image;
    background: $image, -webkit-gradient(linear, left top, left bottom, from($start), to($stop));
    background: $image, -moz-linear-gradient(center top, $start 0%, $stop 100%);
    background: $image, -moz-gradient(center top, $start 0%, $stop 100%);
}
@mixin opacity($op) {
    -khtml-opacity: $op;
    -moz-opacity: $op;
    opacity: $op;
}
@mixin shadow {
    bottom: -41px;
    content: "";
    display: block;
    height: 40px;
    right: 16px;
    position: absolute;
    width: 95%;
    z-index: 51;
    @include vertical-gradient(rgba(#F3F4F5, 1), rgba(white, 0));
}

// Page
html, body {
    background: #F3F4F5;
    overflow: hidden;
}
body {
    color: #565758;
    font: normal 11px/14px $OpenSans;
    margin: 0;
    text-rendering: optimizeLegibility;
}

// border-box all the things.
* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}
div.toolbar {
    height: 40px;
}
// Utils
.group:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}
.hidden {
    display: none;
}
[ng\:cloak], [ng-cloak], .ng-cloak {
    display: none;
}
strong {
    font-weight: bold;
}

// Modules
div.modal {
    background: rgba(black, .6);
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 99;

    div.inner {
        background: #212223;
        color: #F1F1F1;
        margin: 230px auto 0 auto;
        padding: 40px;
        width: 50%;
        @include border-radius(3px);
        @include box-shadow(0, 0, 30px, rgba(black, .4));

        h1 {
            /* The preloader should not use custom font, else some browsers
                will display blank text until that font has loaded */
            font: normal 17px $Helvetica;
            margin-bottom: 20px;
            
            &.loading {
                margin-bottom: 0;
            }
        }
        p {
            color: #AEAEAE;
            font: normal 12px/20px $OpenSans;
            margin-bottom: 20px;
        }
        div.buttons {
            margin-top: 40px;
            text-align: right;
        }
        div.download {
            textarea {
                background: #E3E6E9;
                font: normal 12px monospace;
                height: 100px;
                margin-bottom: 5px;
                margin-top: 0;
                padding: 10px;
                width: 100%;
                @include border-radius(3px);
            }
            p {
                color: #CCC;
            }
        }
    }
}
/* ... */

